[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/items/interface/PokemonDetailedInfo.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/miscellaneous/handbook_info_up.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/PokemonAttributes/type0.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/miscellaneous/handbook_info_down.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/pokemon fonts/Pokemon-FRLG.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/ui/miscellaneous/down_button.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/handbook/bulbasaur.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/miscellaneous/up_button.png" type="Texture" id=8]
[ext_resource path="res://src/items/interface/transaction/SelectArrow.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 41
extra_spacing_top = 28
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
resource_name = "Hide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 525, 525 ), Vector2( 525, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1500 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 525, 0 ), Vector2( 525, 525 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Hide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 525, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FurtherDetailedInfo:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 525, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "HideAll"
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 525, 0 ), Vector2( 525, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FurtherDetailedInfo:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 525, 525 ), Vector2( 525, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FurtherDetailedInfo:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 525, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FurtherDetailedInfo:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 525, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "ShowAll"
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 525, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FurtherDetailedInfo:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 525, 0 ), Vector2( 525, 525 ) ]
}

[node name="PokemonDetailedInfo" type="CanvasLayer"]
layer = 2
offset = Vector2( 525, 0 )
transform = Transform2D( 1, 0, 0, 1, 525, 0 )
follow_viewport_scale = 0.001
script = ExtResource( 1 )

[node name="Control" type="Node" parent="."]

[node name="BackGround" type="TextureRect" parent="Control"]
margin_right = 750.0
margin_bottom = 750.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/BackGround"]
margin_left = -23.0
margin_right = 715.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "Pokemon Detailed Info"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttributeList" type="Control" parent="Control"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Height" type="Label" parent="Control/AttributeList"]
margin_left = 44.0
margin_top = 379.0
margin_right = 943.0
margin_bottom = 515.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "    Height:          to be filled"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weight" type="Label" parent="Control/AttributeList"]
margin_left = 40.0
margin_top = 289.0
margin_right = 932.0
margin_bottom = 422.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "    Weight:         to be filled"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Feature" type="Label" parent="Control/AttributeList"]
margin_left = 54.0
margin_top = 190.0
margin_right = 949.0
margin_bottom = 333.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "  Feature:        to be filled"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Category" type="Label" parent="Control/AttributeList"]
margin_left = 37.0
margin_top = 104.0
margin_right = 936.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "  Category:       to be filled"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttributeImage" type="TextureRect" parent="Control"]
anchor_left = 26.993
anchor_top = -6.559
anchor_right = 35.822
anchor_bottom = -1.345
margin_left = -51296.6
margin_top = 7363.72
margin_right = -68058.2
margin_bottom = 1802.6
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttributeImage2" type="TextureRect" parent="Control"]
anchor_left = 26.993
anchor_top = -6.559
anchor_right = 35.822
anchor_bottom = -1.345
margin_left = -51296.6
margin_top = 7293.72
margin_right = -68058.2
margin_bottom = 1732.6
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowButton" type="TextureRect" parent="Control"]
anchor_left = 26.993
anchor_top = -6.559
anchor_right = 35.822
anchor_bottom = -1.345
margin_left = -51719.6
margin_top = 7689.72
margin_right = -68450.2
margin_bottom = 2160.6
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HideButton" type="TextureRect" parent="Control"]
anchor_left = 26.993
anchor_top = -6.559
anchor_right = 35.822
anchor_bottom = -1.345
margin_left = -51391.6
margin_top = 7687.72
margin_right = -68125.2
margin_bottom = 2158.6
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Show" type="Label" parent="Control"]
margin_left = 149.0
margin_top = 614.0
margin_right = 281.0
margin_bottom = 658.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "Show"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hide" type="Label" parent="Control"]
margin_left = 455.0
margin_top = 610.0
margin_right = 635.0
margin_bottom = 654.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "Hide"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attribute" type="Label" parent="Control"]
margin_left = 519.0
margin_top = 333.0
margin_right = 725.0
margin_bottom = 431.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "Attribute"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectArrow" parent="Control" instance=ExtResource( 9 )]
margin_left = 90.0
margin_top = 666.0
margin_right = 90.0
margin_bottom = 666.0

[node name="FurtherDetailedInfo" type="CanvasLayer" parent="."]
offset = Vector2( 525, 525 )
transform = Transform2D( 1, 0, 0, 1, 525, 525 )

[node name="Control" type="Node" parent="FurtherDetailedInfo"]

[node name="BackGround" type="TextureRect" parent="FurtherDetailedInfo/Control"]
margin_right = 750.0
margin_bottom = 500.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FurtherDetailedInfo/Control/BackGround"]
margin_left = 158.0
margin_top = 16.0
margin_right = 591.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "Description"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttributeList" type="Node" parent="FurtherDetailedInfo/Control"]

[node name="Description" type="Node" parent="FurtherDetailedInfo/Control/AttributeList"]

[node name="Label" type="Label" parent="FurtherDetailedInfo/Control/AttributeList/Description"]
margin_left = 284.0
margin_top = 111.0
margin_right = 714.0
margin_bottom = 328.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = " WUBALUDASDASDSAS
DASDASDASDASDASD
DASDASDASDASD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Profile" type="TextureRect" parent="FurtherDetailedInfo/Control"]
anchor_left = 26.993
anchor_top = -6.559
anchor_right = 35.822
anchor_bottom = -1.345
margin_left = -51783.6
margin_top = 7183.72
margin_right = -68531.2
margin_bottom = 1758.6
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FurtherDetailedInfo"]
anims/Hide = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Show = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hide = SubResource( 5 )
anims/HideAll = SubResource( 6 )
anims/RESET = SubResource( 7 )
anims/Show = SubResource( 8 )
anims/ShowAll = SubResource( 9 )
